--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
   </section>
 
   <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10">
+    <div class="flex flex-col md:flex-row items-center mx-10 md:mx-20">
+      <img src="./assets/img/title.png" alt="" class="pt-10 hidden md:block">
+      <div class="block md:hidden">
+        <img src="./assets/img/title1.png" alt="" class="pt-10">
+        <p class="text-2xl text-blue-900 font-bold">New Brands Added to Our Cashback Program</p>
+      </div>
+      
+    </div>
+    <div class="flex flex-col md:flex-row items-center mx-0 md:mx-20">
+      <p class="text-xl md:text-4xl mx-10">We've added 7000 new brands to our Cashback program, enhancing the benefits for our users and making their experience with DNERO even better.</p>
+    </div>
+    <div class="flex flex-col md:flex-row items-center mx-20">
+      <img src="./assets/img/marcas.png" alt="" class="pt-10 hidden md:block">
+      <div class="block md:hidden">
+        <img src="./assets/img/marcas1.png" alt="" class="pt-10">
+        <img src="./assets/img/marcas2.png" alt="" class="pt-10">
+        <img src="./assets/img/marcas3.png" alt="" class="pt-10">
+        <img src="./assets/img/marcas4.png" alt="" class="pt-10 pb-10">
+      </div>
+    </div>
+
+  </section>
+
+  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10">
     <div class="flex flex-col md:flex-row items-center">
       <img src="./assets/img/team.png" alt="Team Image" class="w-40 h-40 md:w-60 md:h-60">
       <div class="text-center md:text-left md:ml-20 flex-grow mx-10 md:mx-0">
