--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 
   </section>
 
-  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10">
+  <section class="mt-10 mx-36">
+    <img src="./assets/img/section 9.png" alt="">
+  </section>
+
+  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10 block md:hidden">
     <div class="flex flex-col md:flex-row items-center">
       <img src="./assets/img/team.png" alt="Team Image" class="w-40 h-40 md:w-60 md:h-60">
       <div class="text-center md:text-left md:ml-20 flex-grow mx-10 md:mx-0">
@@ -60,8 +64,11 @@
       </div>
     </div>
   </section>
+  <section class="mx-36 mt-10">
+    <img src="./assets/img/section 6.png" alt="">
+  </section>
 
-  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10">
+  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10 block md:hidden">
     <div class="flex flex-col md:flex-row items-center">
       <div class="text-center md:text-left md:ml-20 flex-grow mx-10 md:mx-0">
         <h2 class="text-xl md:text-4xl font-bold text-blue-900 mb-4 pt-10 md:pt-0">DNERO ARK is here now</h2>
@@ -71,6 +78,10 @@
       </div>
       <img src="./assets/img/pin.png" alt="Pin Image" class="h-40 md:h-60 pr-10 my-10">
     </div>
+  </section>
+
+  <section class="mt-10 mx-36">
+    <img src="./assets/img/section 5.png" alt="">
   </section>
 
   <section class="grid grid-cols-1 md:grid-cols-2 mt-10">
