--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   </section>
 
-  <section class="mt-10 mx-36">
+  <section class="mt-10 mx-36 hidden md:block">
     <img src="./assets/img/section 9.png" alt="">
   </section>
 
@@ -64,7 +64,7 @@
       </div>
     </div>
   </section>
-  <section class="mx-36 mt-10">
+  <section class="mx-36 mt-10 hidden md:block">
     <img src="./assets/img/section 6.png" alt="">
   </section>
 
@@ -80,7 +80,7 @@
     </div>
   </section>
 
-  <section class="mt-10 mx-36">
+  <section class="mt-10 mx-36 hidden md:block">
     <img src="./assets/img/section 5.png" alt="">
   </section>
 
