--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
 
   </section>
 
+  <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10 block md:hidden">
+    <div class="flex flex-col md:flex-row items-center mx-10 md:mx-20 pt-10">
+      <div>
+        <p class="text-2xl text-blue-900 font-bold">Strategic Partnerships Across South America</p>
+      </div>
+      
+    </div>
+    <div class="flex flex-col md:flex-row items-center mx-0 md:mx-20">
+      <p class="text-xl md:text-4xl mx-10 pt-6">We're forgin partnerships with banks in South America, starting with Mexico, Colombiam, and El Salvador</p>
+      <br>
+      <p class="text-xl md:text-4xl mx-10">Soon, negotiations with <span class="font-bold text-blue-900">10</span> <span class="font-bold">more countries will follow</span></p>
+    </div>
+    <div class="flex flex-col md:flex-row items-center mx-4">
+      <img src="./assets/img/banderas.png" alt="" class="pt-10">
+    </div>
+
+  </section>
   <section class="mt-10 mx-36 hidden md:block">
     <img src="./assets/img/section 9.png" alt="">
   </section>
