--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <img src="./assets/img/back.png" alt="">
   </section>
 
+  <section class="mt-10 mx-4 md:mx-36">
+    <img src="./assets/img/init.png" alt="">
+  </section>
 
-  <section class="grid grid-cols-1 md:grid-cols-2 pt-40">
+  <section class="grid grid-cols-1 md:grid-cols-2 pt-10">
     <div class="justify-self-center">
       <img src="./assets/img/section.png" alt="" class="h-[40vh] md:h-[60vh]">
     </div>
