--- a/index.html
+++ b/index.html
@@ -13,27 +13,19 @@
 <body>
 
   <section>
-    <img src="./assets/img/back.png" alt="">
+    <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihaYMfyyZdV0keDo9r2rFf9T3n24nKTaXTqUJuc5enG5V0nuaR25jN9UrSM3RfoX4UOLL8cGX7SKudQfu4FsRwlgiSIK_W1Pvw=w2952-h1648-rw-v1" alt="">
   </section>
 
   <section class="mt-10 mx-4 md:mx-36">
-    <img src="./assets/img/init.png" alt="">
+    <img src="https://lh3.google.com/u/0/d/117s5bvEnGZ6hWV-L2idoMH6NrsqnhJBZ=w2000-h1114-iv1" alt="">
   </section>
 
-  <section class="grid grid-cols-1 md:grid-cols-2 pt-10">
-    <div class="justify-self-center">
-      <img src="./assets/img/section.png" alt="" class="h-[40vh] md:h-[60vh]">
-    </div>
-    <div class="justify-self-center">
-      <img src="./assets/img/section 2.png" alt="" class="h-[40vh] md:h-[60vh]">
-    </div>
-  </section>
 
   <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10">
     <div class="flex flex-col md:flex-row items-center mx-10 md:mx-20">
-      <img src="./assets/img/title.png" alt="" class="pt-10 hidden md:block">
+      <img src="https://lh3.google.com/u/0/d/1H9VXoV-cR8L7zqRUlulaxo3yHnJg8L_Y=w2000-h1114-iv1" alt="" class="pt-10 hidden md:block">
       <div class="block md:hidden">
-        <img src="./assets/img/title1.png" alt="" class="pt-10">
+        <img src="https://lh3.google.com/u/0/d/18DSQOO-VwQaq3CCjDnMFreUTNq5LbOpG=w2000-h1114-iv1" alt="" class="pt-10">
         <p class="text-2xl text-blue-900 font-bold">New Brands Added to Our Cashback Program</p>
       </div>
       
@@ -42,12 +34,12 @@
       <p class="text-xl md:text-4xl mx-10">We've added 7000 new brands to our Cashback program, enhancing the benefits for our users and making their experience with DNERO even better.</p>
     </div>
     <div class="flex flex-col md:flex-row items-center mx-20">
-      <img src="./assets/img/marcas.png" alt="" class="pt-10 hidden md:block">
+      <img src="https://lh3.google.com/u/0/d/1HgvAg0MpZbuLviqiIs6A2mwbyln_9n6D=w2000-h1114-iv1" alt="" class="pt-10 hidden md:block">
       <div class="block md:hidden">
-        <img src="./assets/img/marcas1.png" alt="" class="pt-10">
-        <img src="./assets/img/marcas2.png" alt="" class="pt-10">
-        <img src="./assets/img/marcas3.png" alt="" class="pt-10">
-        <img src="./assets/img/marcas4.png" alt="" class="pt-10 pb-10">
+        <img src="https://lh3.google.com/u/0/d/1aar_AgWQBs8yjdvUwoic16GCb6V5o8J1=w1920-h911-iv1" alt="" class="pt-10">
+        <img src="https://lh3.google.com/u/0/d/1sCeHhFVGV09WHtTHUrLB2sUtNu5symCS=w1920-h911-iv1" alt="" class="pt-10">
+        <img src="https://lh3.google.com/u/0/d/1vL8Saacli6q68cQFr-b0jq__FuO74GS6=w1920-h911-iv1" alt="" class="pt-10">
+        <img src="https://lh3.google.com/u/0/d/1JyIvJg6qj29il-0sA21ZGCptsYunXK9U=w1920-h911-iv1" alt="" class="pt-10 pb-10">
       </div>
     </div>
 
@@ -66,17 +58,26 @@
       <p class="text-xl md:text-4xl mx-10">Soon, negotiations with <span class="font-bold text-blue-900">10</span> <span class="font-bold">more countries will follow</span></p>
     </div>
     <div class="flex flex-col md:flex-row items-center mx-4">
-      <img src="./assets/img/banderas.png" alt="" class="pt-10">
+      <img src="https://lh3.google.com/u/0/d/1p5212z3CcAaIbIuocd7pZngfZsuewN0d=w1920-h911-iv1" alt="" class="pt-10">
     </div>
 
   </section>
   <section class="mt-10 mx-36 hidden md:block">
-    <img src="./assets/img/section 9.png" alt="">
+    <img src="https://lh3.google.com/u/0/d/1RCxroK0hy0D1OllnZ7TOYN7FLCQW1-pE=w2000-h1114-iv1" alt="">
+  </section>
+
+  <section class="grid grid-cols-1 md:grid-cols-2 pt-10">
+    <div class="justify-self-center">
+      <img src="https://lh3.google.com/u/0/d/1tpc-7ZCjKB6iOHpnXPRNnjWenmPZARjF=w2000-h1114-iv1" alt="" class="h-[40vh] md:h-[60vh]">
+    </div>
+    <div class="justify-self-center">
+       <img src="https://lh3.googleusercontent.com/fife/ALs6j_E2-p9LITQpRovMFmtNFeDHmiO9qtgiQqevFQyyU6kOuvktQLDsgy_2enWwcitqaCs5e4kpTR_OZQ3FU9RksluGV3iArqLcv9WVlnRi1RjjC0ybKFyGV1oK85DRmF_-L3hi8VFKazD1sWA36xogQR4GUbUdmzlmKoHiDv9iOz6GhbS1Ix3tWFBLNPIzb2uPUahFEBdzuqcW7H0k6MeuMsJBkXVXBHQEhpezCN_Ij-04qh5MrCvt69Wgiuzcrkm752kjIRU9neDlW2J_eBBs1tbemcByH2QEoYLh5WXZF4-LGQg_oy59ilmSfdCODR611oNrBorK6WLnUQ1JF805J6QQzRTEfH7s1cqF4M8Jeub-xmJWYObnVaoBZyp0WA82VD_cfzR75E58lYohy7PrnsYfzOOa0xMgc4YsqRtCThk_rj4YC36FuHqGVl3KoZl92K9ywv0H2v0xjbbB2QamHCntl4pvI_2if-40xE8-YFp7akhVcVwrSlMDrkiTSZvkFZljv8r2MHtTRpILT16MRt1Ter5YpGUL0mVL3XGQQbdiOWR4sGiTfa4fuYCuWgqsYliJc6g4zg5KixhdUpPx6xuWpj-0F0xOroQj-KyFim8DKGqWT_auOcqRk0ZsW09LEaqFWMz6o0Dw__lgehNREZNXC4bb2TD62gsNY9rmLqWOnp-DiBXQ_lxDvxNw1RmU8Q0T0sGXzJyJsPwWzxGuSrawG8KdXBI5iog7kSupWCYtydScfVkHJdIbZc8b47HS4_qOHpxvHdV4Vjh_5sUXEmBGnJhhsZwJ_-z-PgKMVXhCTUaeglyAgZ2NH53e3gm7F9pDgxIsIfcCh2yrz0YqZQLEzHeu_BC0woV_XuMpA7CyGnwwkZ36d8DFsD8Ze_WMImQhRFAPMXC-CcPyaJ4kKrCsvYHXEDA7aJd0a6o4DjvPH8q3F-7ASyW1V1tVIrshC19kbeBVPOj3cftUelebXohDU-Fosr8F93ui0UgYa8eyuRQMUd2pVkrb2jo02tMqO05ECSNMrk7N71j-rmFY8GtRWLUhaByVaHzNSGJeFaKeUPdxYNt5KFXdZyJiQK2ukEiN56DujrXYqXLqE7J81oCWX8MpOJm4ngIaFCLd43vjAsc3-VWje4lcxcdlRnCMKgbtdUwpHubXeGjT65TH_VTctODjhSllZ2OAqjREMXQVhdWowBiV8CcAjrIBtjSNvgjUE1clQqjEJZPxKDl2BMBDJ1JDhKCQnzfrcHhb-HCJ-E81e1DKulyPormDY8a7S936wd185YKuLQDbU_V7yEvZ5ktFOIO42j_RkWlqMohC6PFzuAigWdp_FJiJLRXkgCgiKgVmONVLL_JPAzhVP9HN8SiQNqWQ_9fTFTSk1XiwN-JE2MqF_l8u_23SxAKZgeQi2kl7nrZ3U75dtC2PFbjxQ_pSPSZhkjqexmwdHSTUMH411dwUyXFBVB4HkL89giN4ieYkA5Urm-qs1C4xv1mBI4cmFGaKK3yZbQhGI1alDajOSkplc2EfJrcVJWZXI6iyW2inYoRn-LaFzLadK65Jw6TMFZ-l-6o-T-fzv3LInSMcB1CsB4TLhE1fQ3R0DhNjf8CsqaZiGw=w1920-h911" alt="" class="h-[40vh] md:h-[60vh]">
+    </div>
   </section>
 
   <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10 block md:hidden">
     <div class="flex flex-col md:flex-row items-center">
-      <img src="./assets/img/team.png" alt="Team Image" class="w-40 h-40 md:w-60 md:h-60">
+      <img src="https://lh3.google.com/u/0/d/1jUdqNBbZX7gjwXKhtx4-ug7PM6pSXz_S=w2000-h1114-iv1" alt="Team Image" class="w-40 h-40 md:w-60 md:h-60">
       <div class="text-center md:text-left md:ml-20 flex-grow mx-10 md:mx-0">
         <h2 class="text-xl md:text-4xl font-bold text-blue-900 mb-4">Team Growth and Exciting Opportunities</h2>
         <p class="text-lg md:text-xl">Our team has grown, bringing in diverse talents and </p>
@@ -85,7 +86,7 @@
     </div>
   </section>
   <section class="mx-36 mt-10 hidden md:block">
-    <img src="./assets/img/section 6.png" alt="">
+    <img src="https://lh3.google.com/u/0/d/1c8TBblMGSc4Cpuz_6K25YrEBCfCYAf_A=w2000-h1114-iv1" alt="">
   </section>
 
   <section class="bg-[#eef2fb] mx-12 md:mx-40 rounded mt-10 block md:hidden">
@@ -96,20 +97,20 @@
         <p class="text-lg md:text-xl">our Augmented Reality experience for virtual gifts and rewards.</p>
         <p class="text-lg md:text-xl mt-10 font-bold">Launching on April 30th</p>
       </div>
-      <img src="./assets/img/pin.png" alt="Pin Image" class="h-40 md:h-60 pr-10 my-10">
+      <img src="https://lh3.google.com/u/0/d/1lF2jEpJiqY2qbrSDNHr415FbFwCDolL4=w1920-h911-iv1" alt="Pin Image" class="h-40 md:h-60 pr-10 my-10">
     </div>
   </section>
 
   <section class="mt-10 mx-36 hidden md:block">
-    <img src="./assets/img/section 5.png" alt="">
+    <img src="https://lh3.google.com/u/0/d/174kamNIGULZFCwab7owqq_AfZ1zXFQn1=w2000-h1114-iv1" alt="">
   </section>
 
   <section class="grid grid-cols-1 md:grid-cols-2 mt-10">
     <div class="justify-self-center">
-      <img src="./assets/img/section 4.png" alt="" class="h-[44vh] md:h-[60vh]">
+      <img src="https://lh3.google.com/u/0/d/1FNHih4jMymFPDaotNBXRC4UklwiPHcWb=w2000-h1114-iv1" alt="" class="h-[44vh] md:h-[60vh]">
     </div>
     <div class="justify-self-center">
-      <img src="./assets/img/section 3.png" alt="" class="h-[44vh] md:h-[60vh]">
+      <img src="https://lh3.google.com/u/0/d/1W2sRek5PdR0k3Go95udL4yIJtJTwWAL4=w2000-h1114-iv1" alt="" class="h-[44vh] md:h-[60vh]">
     </div>
   </section>
 
@@ -127,8 +128,8 @@
   </section>
 
   <footer class="mt-20 md:mt-40">
-    <img src="./assets/img/footer.png" alt="" class="hidden md:block">
-    <img src="./assets/img/footer 2.png" alt="" class="block md:hidden">
+    <img src="https://lh3.google.com/u/0/d/1S6AN3VNNISY66tdFey2R3oW696Fm9U25=w2000-h1114-iv1" alt="" class="hidden md:block">
+    <img src="https://lh3.google.com/u/0/d/1yKSEALLdn1-qSf81i0_OW_WP0mvPjfrJ=w2000-h1114-iv1" alt="" class="block md:hidden">
   </footer>
 
 </body>
